# K8SFramework

./: .gitignore  .gitmodules  Changelist.md  buildBinary.sh  buildHelm.sh  change.sh  install.sh  makefile  params.sh  prepare.sh  readme.md
src/: .gitignore  CMakeLists.txt
src/AdminRegistryServer/: AdminReg.tars  AdminRegistryImp.cpp  AdminRegistryImp.h  AdminRegistryServer.cpp  AdminRegistryServer.h  CMakeLists.txt  NodeManager.cpp  NodeManager.h  NodePush.tars
src/AgentServer/: CMakeLists.txt  go.mod  go.sum  main.go
src/ConfigServer/: CMakeLists.txt  ConfigImp.cpp  ConfigImp.h  ConfigInfoInterface.cpp  ConfigInfoInterface.h  ConfigServer.cpp  ConfigServer.h  K8SInterface.cpp  K8SInterface.h  Storage.cpp  Storage.h  main.cpp
src/ControllerServer/: CMakeLists.txt  go.mod  go.sum  main.go
src/ImageServer/: CMakeLists.txt  config.go  constexp.go  docker.go  engine.go  go.mod  go.sum  k8scontex.go  main.go  restful.go  task.go  watch.go
src/KEventServer/: CMakeLists.txt  K8SWatchCallback.cpp  K8SWatchCallback.h  KEventServer.cpp  KEventServer.h  main.cpp
src/KanikoServer/: CMakeLists.txt  cmd.go  constexp.go  go.mod  go.sum  k8scontex.go  main.go
src/LibELSClient/: CMakeLists.txt  ELSJSONBuilder.h  ELSPushGateway.cpp  ELSPushGateway.h  HttpParser.cpp
src/LibESClient/: CMakeLists.txt  ESClient.cpp  ESClient.h  ESHelper.h  JsonTr.h
src/LibK8SClient/: CMakeLists.txt  HttpParser.cpp  HttpParser.h  K8SClient.cpp  K8SClient.h  K8SParams.cpp  K8SParams.h  K8SWatcher.cpp  K8SWatcher.h  K8SWatcherError.h
src/LogServer/: CMakeLists.txt  ESIndex.h  ESReader.cpp  ESReader.h  ESWriter.cpp  ESWriter.h  LogAggregation.cpp  LogAggregation.h  LogImp.cpp  LogImp.h  LogServer.cpp  LogServer.h  SnapshotDraftsman.cpp  TimerTaskQueue.h  Topology.h  Topology.tars  TopologyImp.cpp  (+5 more)
(+1264 files in other folders)
